apps/base/redisinsight/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redisinsight
  labels:
    name: redisinsight
