apps/base/redisinsight/ingressroute.yaml
---
# RedisInsight IngressRoute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redisinsight
  namespace: redisinsight
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`redis.local`)
      kind: Rule
      services:
        - name: redisinsight
          port: 8080
